.conflict-side-1/crates/but-api-macros/tests/tests/ui/fail/base_parameter_transport_reference.stderr
error: `#[but_api(Type)]` only supports owned parameters
 --> tests/ui/fail/base_parameter_transport_reference.rs:7:43
  |
7 |     #[but_api(UiRelativeTo)] relative_to: &str,
  |                                           ^^^^
